--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <div>
              <img class="logo" src="./assets/logo.webp" alt="logo">
         </div>
-        
+
         <div>
             <nav class="nav d-flex gap-5 item-center flex-wrap">
                 <a class="nav-text" href="#">Home</a>
@@ -58,9 +58,22 @@
              </div>
 
              <div>
-                <img src="./assets/logo.webp" alt="">
+             </div>
+
+             <div class=" image ">
+                <img src="./assets/coutom.webp" alt="" class="one" >
+                <img src="./assets/saltn_express.webp" alt="" class="one">
+                <img src="./assets/saltn_village.webp" alt="" class="one">
+             </div>
+
+             <div class="orders ">
+                <a class="order_btn" href="#">Order Now</a>
+                <a class="order_btn" href="#">Order Now</a>
+                <a class="order_btn" href="#">Reserve a table </a>
              </div>
        </div>
+       
+
 
 </body>
 </html>
